--- a/src/base.css
+++ b/src/base.css
@@ -1,3 +1,13 @@
+:root {
+  --grayDark: hsl(60, 0%, 10%);
+  --gray: hsl(60, 0%, 50%);
+  --grayLight: hsl(60, 0%, 70%);
+  --padding: 0.3em;
+  --paddingBox: 1em;
+  --accentDim: hsl(341, 33%, 25%);
+  --accent: hsl(340, 33%, 37%);
+}
+
 html {
   box-sizing: border-box;
 }
@@ -9,7 +19,7 @@ html {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  background-color: darkgray;
+  background-color: var(--gray);
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -19,9 +29,10 @@ body {
   display: flex;
 }
 .demos>div {
-  border: 1px solid rgb(78, 76, 76);
-  padding: 1em;
-  margin: 0.3em;
+  border: var(--padding) solid var(--grayDark);
+  padding: var(--paddingBox);
+  margin: var(--padding);
+  background-color: var(--grayLight);
 }
 main {
   display: flex;
@@ -52,5 +63,12 @@ main>section {
 }
 
 h1 {
-  color: darkolivegreen;
+  color: var(--grayDark));
+}
+
+a {
+  color: var(--accentDim);
+}
+a:hover {
+  color: var(--accent);
 }
