--- a/base.css
+++ b/base.css
@@ -23,6 +23,7 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  color: var(--grayDark);
 }
 
 .fullHeight {
@@ -37,17 +38,28 @@ body {
   padding: var(--paddingBox);
   margin: var(--padding);
   background-color: var(--grayLight);
+  border-radius: 6px;
 }
 main {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 header {
-  font-size: 0.8em;
+  font-size: 1.4em;
   margin-left: 1em;
   margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+header a:link, header a:visited {
+  text-decoration: none;
+  color: var(--grayDark);
+}
+header a:hover {
+  color: var(--accent);
 }
 
 ul.nobullets {
