--- a/demos.css
+++ b/demos.css
@@ -57,6 +57,7 @@ body {
   margin: var(--padding);
   background-color: var(--bg);
   border-radius: 6px;
+  max-width: 30em;
 }
 
 .demos .mods::before {
