--- a/demos.css
+++ b/demos.css
@@ -96,6 +96,7 @@ body {
   text-transform: uppercase;
   font-size: 0.5em;
   padding: 0.5em;
+  margin-top: -0.1em;
   opacity: 0.6;
   border-radius: 1em;
   transition: opacity 0.2s ease-in;
