--- a/demos.css
+++ b/demos.css
@@ -29,7 +29,7 @@ html {
 }
 
 body {
-  overscroll-behavior: contain;
+  /* overscroll-behavior: contain; */
   font-family: var(--font);
   background-color: var(--bg);
   font-weight: 600;
