--- a/ml/base.css
+++ b/ml/base.css
@@ -1,3 +1,10 @@
+:root {
+  --padding: 0.3em;
+  --padding-m: 0.5em;
+  --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --mono-font: "Cascadia Code", Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
+}
+
 #sourceSection {
   position: absolute;
   right: 0;
@@ -8,7 +15,15 @@
   background-color: black;
   color: white;
   padding: 0.2em;
+  font-size: 80%;
   cursor: default;
+}
+
+#sourceSection>nav a:link,
+#sourceSection>nav a:visited,
+#sourceSection>nav a:active,
+#sourceSection>nav a:hover {
+  color: silver
 }
 
 #sourceSection>iframe {
@@ -28,4 +43,19 @@
 
 #sourceSection.l>iframe {
   width: 100vw;
+}
+
+#btnCloseFrame {
+  margin-right: var(--padding-m);
+}
+
+#sourceSection>nav {
+  display: flex;
+  align-items: center;
+}
+
+#sourceSection>nav h1 {
+  font-size: 12px;
+  margin: 0;
+  flex-grow: 1;
 }
